Tentative fix for wrapping weather on iOS

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ header{
   display: grid;
   grid-template:
     "flag details icon" min-content
-    / 32px 1fr 50px;
+    / 32px max-content 50px;
     gap: 0 25px;
     align-items: center;
     padding: 0 10px;
@@ -179,6 +179,7 @@ header{
 
 .weather-bar-details{
   grid-area: details;
+  white-space: nowrap;
 }
 
 .weather-bar-details > span{
